2011-09-23 Sancho Lerena <slerena@artica.es>

	* lib/PandoraFMS/Config.pm: Updated version.

	* lib/PandoraFMS/NetworkServer.pm: Fixed problem with SNMP v2 
	due incorrect call to snmpget.

2011-09-23 Dario Rodriguez <dario.rodriguez@artica.es>
	
	* lib/PandoraFMS/NmapParser.pm: Added an error handler to avoid 
	error during NmapParser lib execution.

2011-09-22  Junichi Satoh <junichi@rworks.jp>

	* pandora_server_installer: Fixed invalid group settings.

2011-09-15  Vanessa Gil  <vanessa.gil@artica.es>

	* pandora_server/util/pandora_manage.pl: Fixed bad behaviour of several
	Pandora CLI options.

2011-09-14  Sancho Lerena <slerena@artica.es>

	* lib/PandoraFMS/DataServer.pm: Fixed a weird problem resolving GPS
	coordinates with OpenStreet.

	* lib/PandoraFMS/NmapParser.pm: Avoid warning messages.

2011-09-12  Sancho Lerena <slerena@artica.es>

	* util/pandora_remote_agent.sh: New remote agent script to do customized
	deployments creating XML files from external scriptfiles. See docs.

2011-09-12  Vanessa Gil  <vanessa.gil@artica.es>

	* pandora_server/util/pandora_manage.pl: Applied Kosaka's patch to store
	data in DB with encoding in HTML entities.


2011-09-12  Dario Rodriguez <dario.rodriguez@artica.es>

	* util/recon_scripts/snmpdevices.pl: Fixed some problems with the script.

2011-09-12  Sancho Lerena <slerena@artica.es>

	* DEBIAN/control: Updated version to 4.0 (final).

	* pandora_server.spec: Updated version. Added mibs package 
	for dependency (Snmp mibs needed to be installed!), without
	that, network server and some scripts won't run properly.

	* pandora_server.redhat.spec,
	lib/PandoraFMS/Config.pm: Updated version to 4.0 final.

2011-09-12  Dario Rodriguez <dario.rodriguez@artica.es>

	* DEBIAN/control: Added dependence of snmp-mibs-downloader
	* pandora_server_installer: Added dependence of snmp-mibs-downloader

2011-09-08  Sancho Lerena <slerena@artica.es>

	*  lib/PandoraFMS/Network.pm: Missing include for function