@@ -1,5 +1,15 @@
 2011-09-23 Sancho Lerena <slerena@artica.es>
 
+	* util/pandora_db.pl: Fixed bug when a blank space was behind
+	the data in the .conf file.
+
+	* util/pandora_diagnostic.sh,
+	util/pandora_db.pl,
+	util/pandora_manage.pl,
+	util/pandora_dbstress.pl: Updated version strings.
+
+2011-09-23 Sancho Lerena <slerena@artica.es>
+
 	* lib/PandoraFMS/Config.pm: Updated version.
 
 	* lib/PandoraFMS/NetworkServer.pm: Fixed problem with SNMP v2 
